--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,6 @@ input[type="number"] {
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
+
+#question { width: 40px; }
+#factor_select { display: inline-block; }
