added "export as gml"
1. added "export as gml"
2. corrected the filename of button "export" in section "Data Properties" from "data.csv" to "data.json"
3. reorganized the code of "export as csv"

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ input:disabled, select:disabled {
     color: #999;
 }
 
-#real_choose_file, #real_export_network, #real_export_network_csv, #real_export_data { display: none; }
+#real_choose_file, #real_export_data, #real_export_network, #real_export_network_csv, #real_export_network_gml { display: none; }
 
 #loading {
     width: 40px;
